<resources>
    <string name="app_name">Heroku Dyno Manager</string>
    <string name="text_enter_api_key">Please Enter You Heroku Api Key</string>
    <string name="text_wlc">Welcome To Heroku Dyno Manager</string>
    <string name="btn_text_next">Next</string>
    <string name="str_dyno_status">Dyno Status</string>
    <string name="str_dyno_command">Command</string>
    <string name="str_dyno_type">Type</string>
    <string name="str_dyno_quantity">Quantity</string>
    <string name="str_dyno_size">Size</string>
    <string name="str_created_at">Created At</string>
    <string name="str_updated_at">Updated At</string>
    <string name="str_dynos">Dynos</string>
    <string name="str_dyno_info">Info</string>
    <string name="str_dyno_state">Dyno State</string>
    <string name="str_appname">Name</string>
    <string name="str_maintainance_mode">Maintenance Mode</string>
    <string name="str_api_key">Api Key</string>
    <string name="str_theme">Theme</string>
    <string name="str_update_api_key">Update Api Key</string>
    <string name="str_unofficial">(Unofficial)</string>
    <string name="str_app_id">App ID</string>
    <string name="str_build_stack">Build Stack</string>
    <string name="str_status">Status</string>
    <string name="str_owner">Owner</string>
    <string name="str_web_url">Web URL</string>
</resources>